# ant-terrarium

./: .gitignore  Cargo.toml  colony_analysis.html  organizzazione_formicaio.txt
.claude/: settings.local.json
.superpowers/brainstorm/282-1779023587/content/: waiting.html
.superpowers/brainstorm/282-1779023587/state/: server-stopped
crates/ant_renderer/: Cargo.toml
crates/ant_renderer/src/: ants.rs  app.rs  assets.rs  camera.rs  hud.rs  input.rs  lib.rs  pixelart.rs  sprites.rs  textures.rs  widget.rs
crates/ant_simulation/: Cargo.toml
crates/ant_simulation/src/: ant.rs  ecology.rs  grid.rs  lib.rs  persistence.rs  queen.rs  snapshot.rs  terrain.rs  tick.rs
docs/superpowers/plans/: 2026-05-17-ant-individual-ai-plan.md  2026-05-17-core-world-rendering-plan.md  2026-05-17-pheromone-system-plan.md
docs/superpowers/specs/: 2026-05-17-ant-individual-ai-design.md  2026-05-17-core-world-rendering-design.md  2026-05-17-desktop-widget-design.md  2026-05-17-ecology-design.md  2026-05-17-pheromone-system-design.md  2026-05-17-queen-lifecycle-design.md
src/: main.rs
