[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_sprite", "bevy_ui", "bevy_input", "bevy_window"] }
ant_simulation = { path = "crates/ant_simulation" }
ant_renderer = { path = "crates/ant_renderer" }
