[package]
name = "ant_terrarium"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_sprite", "bevy_ui", "bevy_winit"] }
ant_simulation = { path = "crates/ant_simulation" }
ant_renderer = { path = "crates/ant_renderer" }

[dependencies]
bevy.workspace = true
ant_renderer.workspace = true
