[package]
name = "ant_terrarium"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = { version = "0.15" }
ant_simulation = { path = "crates/ant_simulation" }
ant_renderer = { path = "crates/ant_renderer" }

[dependencies]
bevy.workspace = true
ant_renderer.workspace = true
ant_simulation.workspace = true
